fix(angular/sidebar): change dark mode background to charcoal (#2097)

--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -967,7 +967,7 @@
       --sbb-select-arrow-icon-color: var(--sbb-color-white);
 
       // Sidebar
-      --sbb-sidebar-background-color: var(--sbb-color-midnight);
+      --sbb-sidebar-background-color: var(--sbb-color-charcoal);
       --sbb-icon-sidebar-background-color: var(--sbb-color-black);
       --sbb-sidebar-border-right-color: var(--sbb-color-iron);
       --sbb-icon-sidebar-background-color-active: var(--sbb-color-charcoal);
